@@ -204,3 +204,5 @@
  28-Jan-2020  V0.953 update configuration documentation and cleanup unused files
  29-Jan-2020  V0.954 finalize feature schema
  30-Jan-2020  V0.955 update dependencies
+ 30-Jan-2020  V0.956 Change PDBx MOCK repository organization from SANDBOX to FTP repository layout, handle missing data for
+                     chromophores, and update configuration example file.
